--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -5,7 +5,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload\n",
+    "\n",
+    "from os import getcwd\n",
+    "from os.path import join, abspath, pardir, relpath, exists\n",
+    "\n",
+    "from dataclasses import dataclass, field\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy import matrixlib as npmat\n",
+    "import networkx as nx\n",
+    "from typing import Union\n",
+    "import pulp as p\n",
+    "from itertools import combinations\n",
+    "from typing import List, Tuple\n",
+    "from enum import Enum\n",
+    "from scipy.stats import kendalltau, spearmanr\n",
+    "\n",
+    "from IPython.display import IFrame\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
   }
  ],
  "metadata": {
