--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -12,6 +12,8 @@
     "from os import getcwd\n",
     "from os.path import join, abspath, pardir, relpath, exists\n",
     "\n",
+    "import requests\n",
+    "\n",
     "from dataclasses import dataclass, field\n",
     "\n",
     "import pandas as pd\n",
@@ -28,6 +30,22 @@
     "from IPython.display import IFrame\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')\n",
+    "data_file = join(data_dir, \"data.csv\")\n",
+    "docs_dir = join(parent_dir, 'docs')\n",
+    "if exists(docs_dir):\n",
+    "    doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
+    "    IFrame(doc_file, width=1200, height=350)\n",
+    "matrix = csv_to_matrix(data_file)"
    ]
   }
  ],
