--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -39,13 +39,14 @@
    "outputs": [],
    "source": [
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
-    "data_dir = join(parent_dir, 'data')\n",
-    "data_file = join(data_dir, \"data.csv\")\n",
-    "docs_dir = join(parent_dir, 'docs')\n",
-    "if exists(docs_dir):\n",
-    "    doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
-    "    IFrame(doc_file, width=1200, height=350)\n",
-    "matrix = csv_to_matrix(data_file)"
+    "\n",
+    "# data_dir = join(parent_dir, 'data')\n",
+    "# data_file = join(data_dir, \"data.csv\")\n",
+    "# docs_dir = join(parent_dir, 'docs')\n",
+    "# if exists(docs_dir):\n",
+    "#     doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
+    "#     IFrame(doc_file, width=1200, height=350)\n",
+    "# matrix = csv_to_matrix(data_file)"
    ]
   }
  ],
