--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'abspath' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m parent_dir \u001b[39m=\u001b[39m abspath(join(join(getcwd(), pardir), pardir))\n\u001b[1;32m      3\u001b[0m \u001b[39m# data_dir = join(parent_dir, 'data')\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# data_file = join(data_dir, \"data.csv\")\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# docs_dir = join(parent_dir, 'docs')\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39m#     IFrame(doc_file, width=1200, height=350)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39m# matrix = csv_to_matrix(data_file)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m parent_dir\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'abspath' is not defined"
+     ]
+    }
+   ],
    "source": [
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
     "\n",
@@ -46,24 +58,40 @@
     "# if exists(docs_dir):\n",
     "#     doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
     "#     IFrame(doc_file, width=1200, height=350)\n",
-    "# matrix = csv_to_matrix(data_file)"
+    "# matrix = csv_to_matrix(data_file)\n",
+    "parent_dir"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('decision_modelling')",
+   "display_name": "Python 3.11.0 ('nutri-score')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "922e2005b522558b637e02e4ef2271899f71cd2929a60d5c7b1a2137b531939a"
+    "hash": "dc774fcdc68854c09e6012d596ed0a7a11de895d7f3322ca16ca697f95a9a8b0"
    }
   }
  },
