--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,26 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'abspath' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m parent_dir \u001b[39m=\u001b[39m abspath(join(join(getcwd(), pardir), pardir))\n\u001b[1;32m      3\u001b[0m \u001b[39m# data_dir = join(parent_dir, 'data')\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# data_file = join(data_dir, \"data.csv\")\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# docs_dir = join(parent_dir, 'docs')\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39m#     IFrame(doc_file, width=1200, height=350)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39m# matrix = csv_to_matrix(data_file)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m parent_dir\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'abspath' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'/Users/mohammadzainabbas/Masters/CS/Decision-Modelling/nutri-score'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "parent_dir = abspath(join(getcwd(), pardir))\n",
+    "data_dir = join(parent_dir, 'data')\n",
+    "output_file = join(data_dir, \"nutri-food-data.csv\")\n",
     "\n",
-    "# data_dir = join(parent_dir, 'data')\n",
-    "# data_file = join(data_dir, \"data.csv\")\n",
     "# docs_dir = join(parent_dir, 'docs')\n",
     "# if exists(docs_dir):\n",
     "#     doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
