--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -51,13 +51,7 @@
    "source": [
     "parent_dir = abspath(join(getcwd(), pardir))\n",
     "data_dir = join(parent_dir, 'data')\n",
-    "output_file = join(data_dir, \"nutri-food-data.csv\")\n",
-    "\n",
-    "# docs_dir = join(parent_dir, 'docs')\n",
-    "# if exists(docs_dir):\n",
-    "#     doc_file = relpath(join(docs_dir, 'practical_works_linear_programing_v3.pdf'))\n",
-    "#     IFrame(doc_file, width=1200, height=350)\n",
-    "# matrix = csv_to_matrix(data_file)\n",
+    "output_file = join(data_dir, \"nutri_food_data.csv\")\n",
     "parent_dir"
    ]
   },
