--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -60,7 +60,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "requests.get(\"\")"
+   ]
   }
  ],
  "metadata": {
