--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.get(\"\")"
+    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O {output_file}"
    ]
   }
  ],
