--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -57,12 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wget: option requires an argument -- 'O'\n",
+      "wget: missing URL\n",
+      "Usage: wget [OPTION]... [URL]...\n",
+      "\n",
+      "Try `wget --help' for more options.\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O {output_file}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
