--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O {output_file}"
+    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O f\"{output_file}"
    ]
   },
   {
