--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -57,23 +57,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wget: option requires an argument -- 'O'\n",
-      "wget: missing URL\n",
-      "Usage: wget [OPTION]... [URL]...\n",
+      "--2022-11-14 11:04:23--  https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv\n",
+      "Resolving static.openfoodfacts.org (static.openfoodfacts.org)... 213.36.253.206\n",
+      "Connecting to static.openfoodfacts.org (static.openfoodfacts.org)|213.36.253.206|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 7325177980 (6.8G) [text/csv]\n",
+      "Saving to: ‘f{output_file}’\n",
       "\n",
-      "Try `wget --help' for more options.\n"
+      "f{output_file}        0%[                    ]   6.94M   519KB/s    eta 3h 45m ^C\n"
      ]
     }
    ],
    "source": [
-    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O f\"{output_file}"
+    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O f\"{output_file}\""
    ]
   },
   {
