--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O f\"{output_file}\""
+    "!wget https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv -O ~/Masters/CS/Decision-Modelling/nutri-score/data/raw_products.csv"
    ]
   },
   {
