--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -57,21 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-11-14 11:04:23--  https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv\n",
-      "Resolving static.openfoodfacts.org (static.openfoodfacts.org)... 213.36.253.206\n",
-      "Connecting to static.openfoodfacts.org (static.openfoodfacts.org)|213.36.253.206|:443... connected.\n",
+      "--2022-11-14 11:05:54--  https://static.openfoodfacts.org/data/en.openfoodfacts.org.products.csv\n",
+      "Resolving static.openfoodfacts.org (static.openfoodfacts.org)... 64:ff9b::d524:fdce, 213.36.253.206\n",
+      "Connecting to static.openfoodfacts.org (static.openfoodfacts.org)|64:ff9b::d524:fdce|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 7325177980 (6.8G) [text/csv]\n",
-      "Saving to: ‘f{output_file}’\n",
+      "Saving to: ‘/Users/mohammadzainabbas/Masters/CS/Decision-Modelling/nutri-score/data/raw_products.csv’\n",
       "\n",
-      "f{output_file}        0%[                    ]   6.94M   519KB/s    eta 3h 45m ^C\n"
+      "s/CS/Decision-Model   0%[                    ]  11.15M   605KB/s    eta 1h 40m "
      ]
     }
    ],
