--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -71,7 +71,7 @@
       "Length: 7325177980 (6.8G) [text/csv]\n",
       "Saving to: ‘/Users/mohammadzainabbas/Masters/CS/Decision-Modelling/nutri-score/data/raw_products.csv’\n",
       "\n",
-      "s/CS/Decision-Model   0%[                    ]  11.15M   605KB/s    eta 1h 40m "
+      "ohammadzainabbas/Ma   0%[                    ]  65.30M   591KB/s    eta 2h 34m "
      ]
     }
    ],
