--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -123,6 +123,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mapping(data, value):\n",
+    "    values = value.split(\".\")\n",
+    "    _data = None\n",
+    "    for val in values:\n",
+    "        _data = data[val]\n",
+    "    return _data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
