--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +133,28 @@
     "    for val in values:\n",
     "        _data = data[val]\n",
     "    return _data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'brand_owner'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_mapping(res, column_mapping[\u001b[39m'\u001b[39;49m\u001b[39mbrand\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "Cell \u001b[0;32mIn [24], line 5\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, value)\u001b[0m\n\u001b[1;32m      3\u001b[0m _data \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[0;32m----> 5\u001b[0m     _data \u001b[39m=\u001b[39m data[val]\n\u001b[1;32m      6\u001b[0m \u001b[39mreturn\u001b[39;00m _data\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'brand_owner'"
+     ]
+    }
+   ],
+   "source": [
+    "get_mapping(res, column_mapping['brand'])"
    ]
   },
   {
