--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -131,7 +131,7 @@
     "    values = value.split(\".\")\n",
     "    _data = None\n",
     "    for val in values:\n",
-    "        _data = data[val]\n",
+    "        _data = _data[val]\n",
     "    return _data"
    ]
   },
