--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -123,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_mapping(data, value):\n",
     "    values = value.split(\".\")\n",
-    "    _data = None\n",
+    "    _data = data\n",
     "    for val in values:\n",
     "        _data = _data[val]\n",
     "    return _data"
@@ -137,20 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'brand_owner'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_mapping(res, column_mapping[\u001b[39m'\u001b[39;49m\u001b[39mbrand\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
-      "Cell \u001b[0;32mIn [24], line 5\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, value)\u001b[0m\n\u001b[1;32m      3\u001b[0m _data \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[0;32m----> 5\u001b[0m     _data \u001b[39m=\u001b[39m data[val]\n\u001b[1;32m      6\u001b[0m \u001b[39mreturn\u001b[39;00m _data\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'brand_owner'"
-     ]
+     "data": {
+      "text/plain": [
+       "'Simply Asia Foods, Inc.'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
