Work in progress

--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -111,18 +111,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "column_mapping = {\n",
-    "    \"brand\": \"product.brand_owner\",\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -137,22 +125,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_mapping = {\n",
+    "    \"brand\": \"product.brand_owner\",\n",
+    "    \"categories\": \"product.categories\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Simply Asia Foods, Inc.'"
+       "{'brand': 'Simply Asia Foods, Inc.',\n",
+       " 'categories': 'Plant-based foods and beverages, Plant-based foods, Cereals and potatoes, Cereals and their products, Noodles, Rice Noodles'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_mapping(res, column_mapping['brand'])"
+    "data = dict()\n",
+    "for key in column_mapping.keys():\n",
+    "    data[key] = get_mapping(res, column_mapping[key])\n",
+    "data"
    ]
   },
   {
