--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -130,6 +130,7 @@
    "outputs": [],
    "source": [
     "column_mapping = {\n",
+    "    \"name\": \"product.generic_name_en\",\n",
     "    \"brand\": \"product.brand_owner\",\n",
     "    \"categories\": \"product.categories\",\n",
     "}"
