Work in progress

--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -125,11 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "column_mapping = {\n",
+    "    \"id\": \"product.id\",\n",
     "    \"name\": \"product.generic_name_en\",\n",
     "    \"brand\": \"product.brand_owner\",\n",
     "    \"categories\": \"product.categories\",\n",
@@ -138,17 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'brand': 'Simply Asia Foods, Inc.',\n",
+       "{'name': 'Rice Noodles',\n",
+       " 'brand': 'Simply Asia Foods, Inc.',\n",
        " 'categories': 'Plant-based foods and beverages, Plant-based foods, Cereals and potatoes, Cereals and their products, Noodles, Rice Noodles'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
