--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -131,6 +131,7 @@
    "source": [
     "column_mapping = {\n",
     "    \"id\": \"product.id\",\n",
+    "    \"image_url\": \"product.image_url\",\n",
     "    \"name\": \"product.generic_name_en\",\n",
     "    \"brand\": \"product.brand_owner\",\n",
     "    \"categories\": \"product.categories\",\n",
