--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -125,33 +125,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "column_mapping = {\n",
     "    \"id\": \"product.id\",\n",
-    "    \"image_url\": \"product.image_url\",\n",
     "    \"name\": \"product.generic_name_en\",\n",
+    "    \"extra_labels\": \"product.labels\",\n",
+    "    \"image_url\": \"product.image_url\",\n",
     "    \"brand\": \"product.brand_owner\",\n",
     "    \"categories\": \"product.categories\",\n",
+    "    \"nutriscore_grade\": \"product.nutriscore_grade\",\n",
+    "    \"nutriscore_score\": \"product.nutriscore_score\",\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Rice Noodles',\n",
+       "{'id': '737628064502',\n",
+       " 'extra_labels': 'No gluten',\n",
+       " 'image_url': 'https://images.openfoodfacts.org/images/products/073/762/806/4502/front_en.6.400.jpg',\n",
+       " 'name': 'Rice Noodles',\n",
        " 'brand': 'Simply Asia Foods, Inc.',\n",
        " 'categories': 'Plant-based foods and beverages, Plant-based foods, Cereals and potatoes, Cereals and their products, Noodles, Rice Noodles'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
