--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mapping(data, value):\n",
+    "def get_mapping(data, key, value):\n",
     "    values = value.split(\".\")\n",
     "    _data = data\n",
     "    for val in values:\n",
@@ -138,6 +138,7 @@
     "    \"categories\": \"product.categories\",\n",
     "    \"nutriscore_grade\": \"product.nutriscore_grade\",\n",
     "    \"nutriscore_score\": \"product.nutriscore_score\",\n",
+    "    \"nutriscore_data\": \"product.nutriscore_data\",\n",
     "}"
    ]
   },
