--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -117,10 +117,12 @@
    "source": [
     "def get_mapping(data, key, value):\n",
     "    values = value.split(\".\")\n",
+    "    is_all = \"all\" in values\n",
     "    _data = data\n",
     "    for val in values:\n",
+    "        if is_all and val == \"all\": break\n",
     "        _data = _data[val]\n",
-    "    return _data"
+    "    return {key: _data} if not is_all else _data"
    ]
   },
   {
