--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,12 +122,12 @@
     "    for val in values:\n",
     "        if is_all and val == \"all\": break\n",
     "        _data = _data[val]\n",
-    "    return {key: _data} if is_all else _data"
+    "    return {key: _data} if not is_all else _data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -160,41 +160,41 @@
        " 'categories': 'Plant-based foods and beverages, Plant-based foods, Cereals and potatoes, Cereals and their products, Noodles, Rice Noodles',\n",
        " 'nutriscore_grade': 'c',\n",
        " 'nutriscore_score': 4,\n",
-       " 'nutriscore_data': {'nutriscore_data': {'energy': 1611,\n",
-       "   'energy_points': 4,\n",
-       "   'energy_value': 1611,\n",
-       "   'fiber': 1.9,\n",
-       "   'fiber_points': 1,\n",
-       "   'fiber_value': 1.9,\n",
-       "   'fruits_vegetables_nuts_colza_walnut_olive_oils': 0,\n",
-       "   'fruits_vegetables_nuts_colza_walnut_olive_oils_points': 0,\n",
-       "   'fruits_vegetables_nuts_colza_walnut_olive_oils_value': 0,\n",
-       "   'grade': 'c',\n",
-       "   'is_beverage': 0,\n",
-       "   'is_cheese': 0,\n",
-       "   'is_fat': 0,\n",
-       "   'is_water': 0,\n",
-       "   'negative_points': 10,\n",
-       "   'positive_points': 6,\n",
-       "   'proteins': 9.62,\n",
-       "   'proteins_points': 5,\n",
-       "   'proteins_value': 9.62,\n",
-       "   'saturated_fat': 1.92,\n",
-       "   'saturated_fat_points': 1,\n",
-       "   'saturated_fat_ratio': 24.9674902470741,\n",
-       "   'saturated_fat_ratio_points': 3,\n",
-       "   'saturated_fat_ratio_value': 25,\n",
-       "   'saturated_fat_value': 1.9,\n",
-       "   'score': 4,\n",
-       "   'sodium': 288,\n",
-       "   'sodium_points': 3,\n",
-       "   'sodium_value': 288,\n",
-       "   'sugars': 13.46,\n",
-       "   'sugars_points': 2,\n",
-       "   'sugars_value': 13.46}}}"
+       " 'energy': 1611,\n",
+       " 'energy_points': 4,\n",
+       " 'energy_value': 1611,\n",
+       " 'fiber': 1.9,\n",
+       " 'fiber_points': 1,\n",
+       " 'fiber_value': 1.9,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils': 0,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_points': 0,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_value': 0,\n",
+       " 'grade': 'c',\n",
+       " 'is_beverage': 0,\n",
+       " 'is_cheese': 0,\n",
+       " 'is_fat': 0,\n",
+       " 'is_water': 0,\n",
+       " 'negative_points': 10,\n",
+       " 'positive_points': 6,\n",
+       " 'proteins': 9.62,\n",
+       " 'proteins_points': 5,\n",
+       " 'proteins_value': 9.62,\n",
+       " 'saturated_fat': 1.92,\n",
+       " 'saturated_fat_points': 1,\n",
+       " 'saturated_fat_ratio': 24.9674902470741,\n",
+       " 'saturated_fat_ratio_points': 3,\n",
+       " 'saturated_fat_ratio_value': 25,\n",
+       " 'saturated_fat_value': 1.9,\n",
+       " 'score': 4,\n",
+       " 'sodium': 288,\n",
+       " 'sodium_points': 3,\n",
+       " 'sodium_value': 288,\n",
+       " 'sugars': 13.46,\n",
+       " 'sugars_points': 2,\n",
+       " 'sugars_value': 13.46}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
    "source": [
     "data = dict()\n",
     "for key in column_mapping.keys():\n",
-    "    data[key] = get_mapping(res, key, column_mapping[key])\n",
+    "    data.update(get_mapping(res, key, column_mapping[key]))\n",
     "data"
    ]
   },
