--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -27,6 +27,8 @@
     "from enum import Enum\n",
     "from scipy.stats import kendalltau, spearmanr\n",
     "\n",
+    "import openfoodfacts as of\n",
+    "\n",
     "from IPython.display import IFrame\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -35,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('decision_modelling')",
+   "display_name": "Python 3.11.0 ('nutri-score')",
    "language": "python",
    "name": "python3"
   },
@@ -46,7 +48,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "922e2005b522558b637e02e4ef2271899f71cd2929a60d5c7b1a2137b531939a"
+    "hash": "dc774fcdc68854c09e6012d596ed0a7a11de895d7f3322ca16ca697f95a9a8b0"
    }
   }
  },
