--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -2,37 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
     "\n",
     "from os import getcwd\n",
     "from os.path import join, abspath, pardir, relpath, exists\n",
-    "\n",
-    "import requests\n",
-    "\n",
     "from dataclasses import dataclass, field\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from numpy import matrixlib as npmat\n",
-    "import networkx as nx\n",
-    "from typing import Union\n",
-    "import pulp as p\n",
-    "from itertools import combinations\n",
-    "from typing import List, Tuple\n",
-    "from enum import Enum\n",
-    "from scipy.stats import kendalltau, spearmanr\n",
-    "\n",
     "import openfoodfacts as of\n",
+    "import requests\n",
     "\n",
     "from IPython.display import IFrame\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -42,7 +46,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
   "orig_nbformat": 4,
