--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the doc link: https://openfoodfacts.github.io/openfoodfacts-python/Usage/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
