--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -65,7 +65,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "column_mapping = {\n",
+    "    \"id\": \"product.id\",\n",
+    "    \"name\": \"product.generic_name_en\",\n",
+    "    \"extra_labels\": \"product.labels\",\n",
+    "    \"image_url\": \"product.image_url\",\n",
+    "    \"brand\": \"product.brand_owner\",\n",
+    "    \"categories\": \"product.categories\",\n",
+    "    \"nutriscore_grade\": \"product.nutriscore_grade\",\n",
+    "    \"nutriscore_score\": \"product.nutriscore_score\",\n",
+    "    \"nutriscore_data\": \"product.nutriscore_data.all\",\n",
+    "    \"nutriments\": \"product.nutriments.all\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dict()\n",
+    "for key in column_mapping.keys():\n",
+    "    data.update(get_mapping(res, key, column_mapping[key]))\n",
+    "data"
+   ]
   }
  ],
  "metadata": {
