--- a/notebooks/test_food_data.ipynb
+++ b/notebooks/test_food_data.ipynb
@@ -26,6 +26,7 @@
     "from typing import List, Tuple\n",
     "from enum import Enum\n",
     "from scipy.stats import kendalltau, spearmanr\n",
+    "from dask import dataframe as dd\n",
     "\n",
     "from IPython.display import IFrame\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
