Work in progress

--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10505,23 +10505,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10000"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plant-based foods and beverages: 327888\n",
+      "Plant-based foods: 282322\n",
+      "Snacks: 207725\n",
+      "Sweet snacks: 148905\n",
+      "Beverages: 127936\n",
+      "Dairies: 107515\n",
+      "Cereals and potatoes: 98893\n",
+      "Meats: 90245\n",
+      "Fermented foods: 83491\n",
+      "Fruits and vegetables based foods: 82367\n",
+      "Fermented milk products: 81905\n",
+      "Condiments: 78644\n",
+      "groceries: 74061\n",
+      "Biscuits and cakes: 67807\n",
+      "Meals: 66987\n",
+      "Cereals and their products: 63521\n",
+      "Desserts: 63102\n",
+      "Spreads: 56674\n",
+      "Sauces: 56387\n",
+      "Cheeses: 55567\n"
+     ]
     }
    ],
    "source": [
-    "for c in categories[:100]:\n",
-    "    print(f\"{c['name']}: {c['']}\")"
+    "for c in categories[:20]:\n",
+    "    print(f\"{c['name']}: {c['products']}\")"
    ]
   },
   {
