--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10505,7 +10505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -10531,12 +10531,42 @@
       "Desserts: 63102\n",
       "Spreads: 56674\n",
       "Sauces: 56387\n",
-      "Cheeses: 55567\n"
+      "Cheeses: 55567\n",
+      "Frozen foods: 50959\n",
+      "Confectioneries: 50520\n",
+      "Prepared meats: 49669\n",
+      "Breakfasts: 48056\n",
+      "Plant-based beverages: 45375\n",
+      "Vegetables based foods: 40490\n",
+      "Canned foods: 38854\n",
+      "Seafood: 36264\n",
+      "Fruits based foods: 34352\n",
+      "Sweet spreads: 34344\n",
+      "Cocoa and its products: 34136\n",
+      "Biscuits: 32715\n",
+      "Dairy desserts: 28165\n",
+      "Plant-based spreads: 27291\n",
+      "Fats: 27165\n",
+      "Breads: 26475\n",
+      "Fishes: 26470\n",
+      "Fermented dairy desserts: 23468\n",
+      "Yogurts: 22150\n",
+      "Alcoholic beverages: 22055\n",
+      "Poultries: 21992\n",
+      "Pastas: 21801\n",
+      "Canned plant-based foods: 21631\n",
+      "Cakes: 21623\n",
+      "Vegetable fats: 21081\n",
+      "Sweeteners: 20325\n",
+      "Salty snacks: 20158\n",
+      "Frozen desserts: 20155\n",
+      "Seeds: 19602\n",
+      "Legumes and their products: 19302\n"
      ]
     }
    ],
    "source": [
-    "for c in categories[:20]:\n",
+    "for c in categories[:50]:\n",
     "    print(f\"{c['name']}: {c['products']}\")"
    ]
   },
