Work in progress

--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -11218,16 +11218,16 @@
    "outputs": [],
    "source": [
     "column_mapping = {\n",
-    "    \"id\": \"product.id\",\n",
-    "    \"name\": \"product.generic_name_en\",\n",
-    "    \"extra_labels\": \"product.labels\",\n",
-    "    \"image_url\": \"product.image_url\",\n",
-    "    \"brand\": \"product.brand_owner\",\n",
-    "    \"categories\": \"product.categories\",\n",
-    "    \"nutriscore_grade\": \"product.nutriscore_grade\",\n",
-    "    \"nutriscore_score\": \"product.nutriscore_score\",\n",
-    "    \"nutriscore_data\": \"product.nutriscore_data.all\",\n",
-    "    \"nutriments\": \"product.nutriments.all\",\n",
+    "    \"id\": \"id\",\n",
+    "    \"name\": \"generic_name_en\",\n",
+    "    \"extra_labels\": \"labels\",\n",
+    "    \"image_url\": \"image_url\",\n",
+    "    \"brand\": \"brand_owner\",\n",
+    "    \"categories\": \"categories\",\n",
+    "    \"nutriscore_grade\": \"nutriscore_grade\",\n",
+    "    \"nutriscore_score\": \"nutriscore_score\",\n",
+    "    \"nutriscore_data\": \"nutriscore_data.all\",\n",
+    "    \"nutriments\": \"nutriments.all\",\n",
     "}"
    ]
   },
