--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -11213,7 +11213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11233,7 +11233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11249,19 +11249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "'product'",
+     "evalue": "'generic_name_en'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [30], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m product \u001b[39min\u001b[39;00m products:\n\u001b[1;32m      3\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 4\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      5\u001b[0m data\n",
-      "Cell \u001b[0;32mIn [29], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'product'"
+      "Cell \u001b[0;32mIn [34], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m product \u001b[39min\u001b[39;00m products:\n\u001b[1;32m      3\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 4\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      5\u001b[0m data\n",
+      "Cell \u001b[0;32mIn [33], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'generic_name_en'"
      ]
     }
    ],
